4.8.2

- Security fixes
  - ./.csirc is no longer loaded from the current directory upon startup of csi,
    which could lead to untrusted code execution. (thanks to Florian Zumbiehl)

- Tools
  - csc: added "-oi"/"-ot" options as alternatives to "-emit-inline-file"
    and "-emit-type-file", respectively; "-n" has been deprecated.

- Core libraries
  - read-line no longer returns trailing CRs in rare cases on TCP ports (#568)
  - write and pp now correctly use escape sequences for control characters
     (thanks to Florian Zumbiehl)

- Runtime system
  - Special events in poll() are now handled, avoiding hangs in threaded apps.

- C API
  - Deprecated C_get_argument[_2] and C_get_environment_variable[_2] functions.

4.8.1

- Security fixes
  - CVE-2012-6122: Use POSIX poll() on systems where available.  This avoids a
    design flaw in select(); it supports no more than FD_SETSIZE descriptors.

- Core libraries
  - Fixed EINTR handling in process-wait and when reading from file ports.
  - Irregex is updated to 0.9.2, which includes bugfixes and faster submatches.
  - Compile-time expansions for "[sf]printf" are slightly more efficient.
  - Removed the deprecated "always?", "never?", "shuffle" and "none?" procedures.
  - Fixed problem "make-pathname" that returned an absolute path if given
    a relative one without a directory argument.
  - The implementation of promises has been made more efficient.
  - Removed the deprecated "c-runtime", "null-pointer?" and "pointer-offset"
    procedures.
  - The deprecated alias "mutate-procedure" for "mutate-procedure!" has
    been removed.
  - On 64-bit systems the feature identifier "64bit" is registered.
  - "process-fork" accepts an optional argument that specifies
    wether other threads should be terminated in the child process.
  - The "signal/bus" signal identifier was missing.
  - Added setter-procedure for "signal-mask".
  - Added "recursive-hash-max-length" and "recursive-hash-max-depth"
    parameters (srfi-69).